added versioning stuff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
 requires = [
     "setuptools>=45",
     "wheel",
+    "setuptools_scm[toml]>=6.2",
 ]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools_scm]
