--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,4 +22,12 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+
 [tool.setuptools_scm]
+
+
+[project.optional-dependencies]
+dev = [
+    "pytest",
+    "setuptools_scm",
+]
