--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,7 @@ description = "Example of how to package Python projects"
 readme = "README.md"
 requires-python = ">=3.8.0"
 dynamic = ["version"] # this means it will get infered automatically
-
 license = {text = "BSD-3-Clause"}
-
 dependencies = [
     "numpy",
     "pandas",
@@ -31,4 +29,24 @@ dev = [
     "pytest",
     "setuptools_scm",
     "flake8",
+    "black",
 ]
+
+
+[tool.black]
+target-version = ['py38', 'py39', 'py310']
+skip-string-normalization = false
+line-length = 79
+exclude = '''
+(
+  /(
+      \.eggs
+    | \.git
+    | \.hg
+    | \.mypy_cache
+    | _build
+    | build
+    | dist
+  )/
+)
+'''
